--- a/package.json
+++ b/package.json
@@ -1,4 +1,9 @@
 {
+  "scripts": {
+    "build": "ts-node",
+    "start": "ts-node index.ts",
+    "migrate": "npx prisma migrate dev"
+  },
   "dependencies": {
     "@prisma/client": "^5.9.1",
     "config": "^3.3.11",
