--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.9.1",
+    "bcrypt": "^5.1.1",
     "config": "^3.3.11",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
@@ -20,6 +21,7 @@
     "rc": "^1.2.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/config": "^3.3.3",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
