--- a/package.json
+++ b/package.json
@@ -4,31 +4,58 @@
     "start": "ts-node index.ts",
     "migrate": "npx prisma migrate dev"
   },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts",
+    "dependencies": {
+      "@prisma/client": "^5.9.1",
+      "bcrypt": "^5.1.1",
+      "config": "^3.3.11",
+      "cors": "^2.8.5",
+      "debug": "^4.3.4",
+      "express": "^4.18.2",
+      "express-mung": "^0.5.1",
+      "helmet": "^7.1.0",
+      "joi": "^17.12.1",
+      "jsonwebtoken": "^9.0.2",
+      "morgan": "^1.10.0",
+      "nodemon": "^3.0.3",
+      "pug": "^3.0.2",
+      "rc": "^1.2.8"
+    },
+    "devDependencies": {
+      "@types/bcrypt": "^5.0.2",
+      "@types/config": "^3.3.3",
+      "@types/cors": "^2.8.17",
+      "@types/express": "^4.17.21",
+      "@types/jsonwebtoken": "^9.0.5",
+      "@types/node": "^20.14.2",
+      "prisma": "^5.9.1",
+      "ts-node": "^10.9.2",
+      "typescript": "^5.4.5"
+    }
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.2",
+    "prisma": "^5.15.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.5"
+  },
   "dependencies": {
-    "@prisma/client": "^5.9.1",
+    "@prisma/client": "^5.15.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/config": "^3.3.4",
+    "@types/jsonwebtoken": "^9.0.6",
     "bcrypt": "^5.1.1",
     "config": "^3.3.11",
     "cors": "^2.8.5",
-    "debug": "^4.3.4",
-    "express": "^4.18.2",
-    "express-mung": "^0.5.1",
+    "express": "^4.19.2",
     "helmet": "^7.1.0",
-    "joi": "^17.12.1",
+    "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "nodemon": "^3.0.3",
-    "pug": "^3.0.2",
-    "rc": "^1.2.8"
-  },
-  "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/config": "^3.3.3",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/node": "^20.11.19",
-    "prisma": "^5.9.1",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   }
 }
