--- a/package.json
+++ b/package.json
@@ -12,19 +12,19 @@
     "forever-stop": "forever stop index.ts",
     "forever-restart": "forever restart index.ts",
     "forever-list": "forever list"
-    
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^5.15.0",
+    "@prisma/client": "^5.16.0",
     "@types/bcrypt": "^5.0.2",
     "@types/config": "^3.3.4",
     "@types/jsonwebtoken": "^9.0.6",
     "bcrypt": "^5.1.1",
     "config": "^3.3.11",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "forever": "^4.0.3",
     "helmet": "^7.1.0",
@@ -47,7 +47,7 @@
     "eslint-plugin-unused-imports": "^4.0.0",
     "globals": "^15.6.0",
     "prettier": "^3.3.2",
-    "prisma": "^5.15.0",
+    "prisma": "^5.16.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.13.1"
