--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "helmet": "^7.1.0",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0",
+    "nodemon": "^3.1.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.0",
