--- a/.env
+++ b/.env
@@ -4,9 +4,7 @@ ALLOWED_ORIGIN="*"
 ALLOWED_HEADERS="Content-Type, Authorization"
 #DOMAIN_URL="http://localhost:3000"
 JWT_SECRET_KEY = gAVckoXdzIuH2FspGZeBGgV6uMv3KGta
-
-
-
+JWT_REFRESH_SECRET=your_refresh_token_secret_key
 
 #aws database 
 #DATABASE_URL="postgresql://postgres:12345@localhost:5432/nutritionModule?schema=public"
@@ -16,3 +14,16 @@ JWT_SECRET_KEY = gAVckoXdzIuH2FspGZeBGgV6uMv3KGta
 # ALLOWED_HEADERS="Content-Type, Authorization"
 # DOMAIN_URL="http://localhost:3000"
 # JWT_SECRET_KEY = gAVckoXdzIuH2FspGZeBGgV6uMv3KGta
+
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_SECURE=false
+SMTP_USER=your-email@gmail.com
+SMTP_PASS=your-app-specific-password
+EMAIL_FROM_NAME=Nutritionist App
+EMAIL_FROM_ADDRESS=noreply@yourapp.com
+APP_URL=http://localhost:3000
+FRONTEND_URL=http://localhost:3000
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=your_secure_redis_password
