--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@aws-sdk/s3-request-presigner": "^3.741.0",
     "@nestjs/swagger": "^11.0.3",
     "@prisma/client": "^5.16.0",
+    "@sentry/node": "^8.54.0",
+    "@sentry/profiling-node": "^8.54.0",
     "@types/bcrypt": "^5.0.2",
     "@types/config": "^3.3.4",
     "@types/jsonwebtoken": "^9.0.6",
@@ -44,8 +46,6 @@
     "react-dom": "^18.3.1",
     "socket.io": "^4.8.1",
     "speakeasy": "^2.0.0",
-    "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
     "uuidv4": "^6.2.13",
@@ -71,13 +71,21 @@
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-unused-imports": "^4.0.0",
     "globals": "^15.6.0",
+    "install": "^0.13.0",
     "jest": "^29.7.0",
+    "npm": "^11.1.0",
     "prettier": "^3.3.2",
     "prisma": "^5.17.0",
+    "sudo": "^1.0.3",
     "supertest": "^7.0.0",
     "swagger-autogen": "^2.23.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.5.4",
     "typescript-eslint": "^7.13.1"
+  },
+  "engines": {
+    "node": "^18.0.0"
   }
 }
